# controller/admin.go
@@ -2,16 +2,15 @@ package controller
 
 import (
 	"cash-server/db"
-	"cash-server/model"
 	"cash-server/pkg/encryption"
 	"cash-server/pkg/util"
-	"strconv"
+	"cash-server/service"
 
 	"github.com/gin-gonic/gin"
 )
 
-//Addrep  回復格式
-type Addrep struct {
+//AddRespMsg  回復格式
+type AddRespMsg struct {
 	Account     string
 	Token       string
 	TokenSecret string
@@ -19,56 +18,41 @@ type Addrep struct {
 }
 
 // PlatformRegisterServerAdd  新增平台帳號
-// @Summary PlatformRegisterServer
+// @Summary PlatformRegisterServer 新增平台帳號
 // @Tags Admin
 // @Produce  json
 // @Accept  application/x-www-form-urlencoded
-// @Param name formData string true "平台名稱"
-// @Param account formData string true "平台帳號"
-// @Param password formData string true "平台密碼"
-// @Param email formData string false "聯絡信箱"
-// @Param groupid formData string false "群組代號 - 預設為1"
-// @success 200 {string} string "{"account":"zxcc","status":"success","time":"2020-07-30 17:18:05","token":"18zM3WAF3HKa0Ve4Iss+HA","tokenSecret":"BNFk4iJHx"}"
-// @success 400 {string} string "{"status":"FAIL",    "msg": "錯誤訊息"}"
-// @success 411 {string} string "{"status":"FAIL",    "msg": "錯誤訊息"}"
-// @Router /admin/register [post]
+// @Param PlatformName formData string true "平台名稱"
+// @Param PlatformAccount formData string true "平台帳號"
+// @Param PlatformPassword formData string true "平台密碼"
+// @Param PlatformEmail formData string false "聯絡信箱"
+// @Param PlatformGroupID formData string false "群組代號 - 預設為1"
+// @success 200 {string} string "{"ecode":200,"msg":"ok","data":{"Account":"test123","Token":"7z7cxTyljnCXAyOLd/sOTw","TokenSecret":"wFwTezBIL0oElVXC","Time":"2020-08-06 15:53:36"}}"
+// @success 411 {string} string "{"ecode":1001,"msg":"請求參數短少或錯誤","data":null}"
+// @Router /admin/platform [post]
 func PlatformRegisterServerAdd(c *gin.Context) {
-	var rep Addrep
-	rep.Account = c.PostForm("account")
-	pw := c.PostForm("password")
-	name := c.PostForm("name")
-	email := c.PostForm("email")
-	groupid := c.PostForm("groupid")
-	if groupid == "" {
-		groupid = "1"
+	var p db.PaymentPlatform
+	var resmsg AddRespMsg
+	c.Bind(&p)
+	if p.PlatformGroupID == 0 {
+		p.PlatformGroupID = 1
 	}
-	if rep.Account != "" && pw != "" && name != "" {
-		if model.PaymentPlatformCheck(rep.Account) {
-			c.JSON(411, res(1002, nil))
+	if p.PlatformAccount != "" && p.PlatformPassword != "" && p.PlatformName != "" {
+		util.Info("註冊 PlatformRegisterServer ->", p.PlatformAccount)
+		p.PlatformTokenSecret = encryption.Rand16()
+		p.PlatformToken = encryption.PswEncrypt(p.PlatformAccount, p.PlatformTokenSecret)
+		resmsg.Time = util.GETNowsqltime()
+		resmsg.Token = p.PlatformToken
+		resmsg.TokenSecret = p.PlatformTokenSecret
+		resmsg.Account = p.PlatformAccount
+		p.Status = "0"
+		msg := service.PaymentPlatformAdd(p)
+		if msg == true {
+			c.JSON(200, resp(200, resmsg))
 		} else {
-			//PaymentPlatformCheck(rep.Account)
-			rep.TokenSecret = encryption.Rand16()
-			rep.Token = encryption.PswEncrypt(rep.Account, rep.TokenSecret)
-			rep.Time = util.GETNowsqltime()
-			util.Info("註冊 PlatformRegisterServer ->", rep.Account)
-			//err := model.PlatformRegister(rep.Account, pw, name, groupid, email, rep.Token, rep.TokenSecret, rep.Time)
-			var p db.PaymentPlatform
-			p.PlatformAccount = rep.Account
-			p.PlatformGroupID, _ = strconv.Atoi(groupid)
-			p.PlatformName = name
-			p.PlatformPassword = pw
-			p.PlatformToken = rep.Token
-			p.PlatformTokenSecret = rep.TokenSecret
-			p.PlatformEmail = email
-			p.Status = "0"
-			err := model.PaymentPlatformAdd(p)
-			if err != nil {
-				c.JSON(411, res(8000, rep))
-			} else {
-				c.JSON(200, res(200, rep))
-			}
+			c.JSON(411, resp(1002, nil))
 		}
 	} else {
-		c.JSON(411, res(1001, nil))
+		c.JSON(411, resp(1001, nil))
 	}
 }
